--- a/src/resources/elements/editable.html
+++ b/src/resources/elements/editable.html
@@ -11,7 +11,7 @@
         <div class="row" stylex="padding:0;"><strong style="float:right">${story.name}</strong></div>
 
         <div class="fr-view row ${settings.class}">
-            <p innerhtml.bind="story.story_text" css="float:right;direction:rtl" ;>
+            <p innerhtml.bind="story.story_text" css="float:right;direction:rtl;" >
             </p>
         </div>
     </div>
