--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -27,7 +27,7 @@
                             </div>
                         </div>
                     </div>
-                    <ul style="width:100%;padding:0;float:right;height:560px;overflow:auto;list-style-type: none;">
+                    <ul style="width:100%;padding:0;float:right;height:560px;overflow:auto;list-style-type: none;padding-left:20px;">
                         <li repeat.for="story of story_list | filter: filter : 9999 : 'name' : 'author'" dir="rtl" style="float:right;border-bottom:2px solid lightgray;padding-bottom:20px;position:relative;width:100%;">
                             <div style="height:130px;overflow:hidden;padding:20px;">
                                 <div style="margin-bottom: 10px;">
