--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -10,7 +10,7 @@
         <photo-strip source.bind="source" height.bind="220" id.bind="member.member_info.id" action_key="Zoom"
             settings.bind="{arrows:true, height:220}"></photo-strip>
         <div>
-            <div class="row content-area" style="min-height:280px;width:1170px;border-bottom: solid 3px gray;margin: 0;" dir="rtl">
+            <div class="row content-area" style="min-height:280px;width:1170px;border-bottom: solid 6px white;margin: 0;" dir="rtl">
                 <div class="col-md-6">
                     <div class="row" if.bind="member.family_connections.hasFamilyConnections">
                         <h3>${'members.family-connections' & t}</h3>
@@ -111,11 +111,11 @@
                 </div>
             </div>
             <div class="row fr-view slide-list" if.bind="! user.editing" interact-draggable interact-dragend.delegate="shift_stories($event)"
-                dir="rtl" style="padding-right:15px;border-bottom: solid 3px gray;">
+                dir="rtl" style="padding-right:15px;border-bottom: solid 6px white;">
                 <div if.bind="stories_scroll" class="slide-control next" click.trigger="next_story($event, -1)"><i class="fa fa-chevron-right fa-3x"></i></div>
                 <div if.bind="stories_scroll" class="slide-control prev" click.trigger="next_story($event, +1)"><i class="fa fa-chevron-left fa-3x"></i></div>
 
-                <div class="col-md-3" show.bind="story_4.story_text != ''" style="float:right;padding-right:0px;">
+                <div class="col-md-3" show.bind="story_4.story_text != ''" style="float:right;padding-right:0px;border-left:solid 6px white;">
                     <h4 show.bind="story_4.name" dir="rtl">
                         <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_4, 'show')">&nbsp;</i>
                         <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_4, 'edit')">&nbsp;</i>                        ${story_4.name}
@@ -125,7 +125,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-3" show.bind="story_3.story_text != ''" style="float:right;padding-right:0px;">
+                <div class="col-md-3" show.bind="story_3.story_text != ''" style="float:right;padding-right:0px;;border-left:solid 6px white;padding-right:12px;">
                     <h4 show.bind="story_3.name" dir="rtl">
                         <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_3, 'show')">&nbsp;</i>
                         <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_3, 'edit')">&nbsp;</i>                        ${story_3.name}
@@ -135,7 +135,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-3" show.bind="story_2.story_text != ''" style="float:right;padding-right:0px;">
+                <div class="col-md-3" show.bind="story_2.story_text != ''" style="float:right;padding-right:0px;;border-left:solid 6px white;;padding-right:12px;">
                     <h4 show.bind="story_2.name" dir="rtl">
                         <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_2, 'show')">&nbsp;&nbsp;</i>
                         <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_2, 'edit')">&nbsp;</i>                        ${story_2.name}
@@ -145,7 +145,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-3" show.bind="story_1.story_text != '' || user.privileges.EDITOR" style="float:right;padding-right:0px;">
+                <div class="col-md-3" show.bind="story_1.story_text != '' || user.privileges.EDITOR" style="float:right;padding-right:0px;padding-right:12px;">
                     <h4 show.bind="story_1.name" dir="rtl">
                         <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_1, 'show')">&nbsp;&nbsp;</i>
                         <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_1, 'edit')">&nbsp;</i>                        ${story_1.name}
