detach photo from membe

--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -102,7 +102,8 @@
                     </h4>
                     <h3 show.bind="story_0.name || story_0.topic" dir="rtl" style="padding:0;margin:0;">
                         <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_0, 'show')">&nbsp;&nbsp;</i>
-                        <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_0, 'edit')">&nbsp;</i>                        ${story_0.name}
+                        <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_0, 'edit')">&nbsp;</i>
+                        ${story_0.name}
                     </h3>
                     <div class="story-panel">
                         <p dir="rtl" innerhtml.bind="story_0.story_text ">
@@ -118,7 +119,8 @@
                 <div class="col-md-3" show.bind="story_4.story_text != ''" style="float:right;padding-right:0px;border-left:solid 6px white;">
                     <h4 show.bind="story_4.name" dir="rtl">
                         <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_4, 'show')">&nbsp;</i>
-                        <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_4, 'edit')">&nbsp;</i>                        ${story_4.name}
+                        <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_4, 'edit')">&nbsp;</i>
+                        ${story_4.name}
                     </h4>
                     <div class="story-panel">
                         <p dir="rtl" innerhtml.bind="story_4.story_text ">
@@ -128,7 +130,8 @@
                 <div class="col-md-3" show.bind="story_3.story_text != ''" style="float:right;padding-right:0px;;border-left:solid 6px white;padding-right:12px;">
                     <h4 show.bind="story_3.name" dir="rtl">
                         <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_3, 'show')">&nbsp;</i>
-                        <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_3, 'edit')">&nbsp;</i>                        ${story_3.name}
+                        <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_3, 'edit')">&nbsp;</i>
+                        ${story_3.name}
                     </h4>
                     <div class="story-panel">
                         <p dir="rtl" innerhtml.bind="story_3.story_text ">
@@ -138,7 +141,8 @@
                 <div class="col-md-3" show.bind="story_2.story_text != ''" style="float:right;padding-right:0px;;border-left:solid 6px white;;padding-right:12px;">
                     <h4 show.bind="story_2.name" dir="rtl">
                         <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_2, 'show')">&nbsp;&nbsp;</i>
-                        <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_2, 'edit')">&nbsp;</i>                        ${story_2.name}
+                        <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_2, 'edit')">&nbsp;</i>
+                        ${story_2.name}
                     </h4>
                     <div class="story-panel">
                         <p dir="rtl" innerhtml.bind="story_2.story_text ">
@@ -148,7 +152,8 @@
                 <div class="col-md-3" show.bind="story_1.story_text != '' || user.privileges.EDITOR" style="float:right;padding-right:0px;padding-right:12px;">
                     <h4 show.bind="story_1.name" dir="rtl">
                         <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_1, 'show')">&nbsp;&nbsp;</i>
-                        <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_1, 'edit')">&nbsp;</i>                        ${story_1.name}
+                        <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_1, 'edit')">&nbsp;</i>
+                        ${story_1.name}
                     </h4>
                     <div class="story-panel">
                         <p dir="rtl" innerhtml.bind="story_1.story_text">
