--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -97,8 +97,7 @@
                 </div>
                 <div class="col-md-6 fr-view" style="margin-bottom:16px;" if.bind="(user.privileges.EDITOR || story_0.story_text != '') && ! user.editing"
                     )>
-                    <h4 style="margin-top:16px;margin-bottom:0px;color:gray;">
-                        ${story_0.topic}
+                    <h4 innherhtml.bind="story_0.topic" style="margin-top:16px;margin-bottom:0px;color:gray;">
                     </h4>
                     <h3 show.bind="story_0.name || story_0.topic" dir="rtl" style="padding:0;margin:0;">
                         <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_0, 'show')">&nbsp;&nbsp;</i>
@@ -120,7 +119,7 @@
                     <h4 show.bind="story_4.name" dir="rtl">
                         <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_4, 'show')">&nbsp;</i>
                         <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_4, 'edit')">&nbsp;</i>
-                        ${story_4.name}
+                        <span innerhtml.bind="story_4.name"></span>
                     </h4>
                     <div class="story-panel">
                         <p dir="rtl" innerhtml.bind="story_4.story_text ">
@@ -131,7 +130,7 @@
                     <h4 show.bind="story_3.name" dir="rtl">
                         <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_3, 'show')">&nbsp;</i>
                         <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_3, 'edit')">&nbsp;</i>
-                        ${story_3.name}
+                        <span innerhtml.bind="story_3.name"></span>
                     </h4>
                     <div class="story-panel">
                         <p dir="rtl" innerhtml.bind="story_3.story_text ">
@@ -139,10 +138,10 @@
                     </div>
                 </div>
                 <div class="col-md-3" show.bind="story_2.story_text != ''" style="float:right;padding-right:0px;;border-left:solid 6px white;;padding-right:12px;">
-                    <h4 show.bind="story_2.name" dir="rtl">
+                    <h4 show.bind="story_2.name" dir="rtl" >
                         <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_2, 'show')">&nbsp;&nbsp;</i>
                         <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_2, 'edit')">&nbsp;</i>
-                        ${story_2.name}
+                        <span innerhtml.bind="story_2.name"></span>
                     </h4>
                     <div class="story-panel">
                         <p dir="rtl" innerhtml.bind="story_2.story_text ">
@@ -153,7 +152,7 @@
                     <h4 show.bind="story_1.name" dir="rtl">
                         <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_1, 'show')">&nbsp;&nbsp;</i>
                         <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_1, 'edit')">&nbsp;</i>
-                        ${story_1.name}
+                        <span innerhtml.bind="story_1.name"></span>
                     </h4>
                     <div class="story-panel">
                         <p dir="rtl" innerhtml.bind="story_1.story_text">
