--- a/src/members/member-picker.html
+++ b/src/members/member-picker.html
@@ -27,7 +27,8 @@
         <div class="member-list popup">
             <div style="padding-right:75px;">
                 <ul class="list-group">
-                    <li repeat.for="member of members | filter : filter : 3000 : gender : 'full_name':'name'" class="list-group-item ${member.id === $parent.selectedId ? 'active' : ''}"
+                    <li repeat.for="member of members | filter : filter : 3000 : gender : 'full_name':'name'" 
+                        class="list-group-item ${member.id === $parent.selectedId ? 'active' : ''}"
                         style="width:65px;float:right;min-height:88px;font-size:9px;vertical-align: text-bottom;">
 
                         <a click.trigger="select(member)" style="vertical-align: text-bottom;align-content: center;" aubs-tooltip="text.bind:member.name">
