--- a/src/members/member-picker.html
+++ b/src/members/member-picker.html
@@ -27,14 +27,14 @@
         <div class="member-list popup">
             <div style="padding-right:75px;">
                 <ul class="list-group">
-                    <li repeat.for="member of members | filter : filter : 3000 : gender : 'full_name':'name'" 
+                    <li repeat.for="member of members | filter : gender : 'full_name':'name' | take : 3000" 
                         class="list-group-item ${member.id === $parent.selectedId ? 'active' : ''}"
                         style="width:65px;float:right;min-height:88px;font-size:9px;vertical-align: text-bottom;">
 
                         <a click.trigger="select(member)" style="vertical-align: text-bottom;align-content: center;" aubs-tooltip="text.bind:member.name">
                             <img style="width:50px;height:50px;border-radius:50%;" src.bind="member.facePhotoURL" />
                             <h6 dir="rtl" class="list-group-item-heading" style="text-align: center;">${member.name}</h6>
-                    </a>
+                        </a>
                     </li>
                 </ul>
             </div>
