--- a/src/resources/elements/multi-select.html
+++ b/src/resources/elements/multi-select.html
@@ -57,7 +57,7 @@
         <!-- Under the line come all unselected options -->
         <div class="row options unselected" css="max-height:${height_unselected}px;" if.bind="options && options.length > 0">
             <ul css="width:${width}px;" if.bind="true || unselected_options===[]">
-                <li repeat.for="option of options | filter: filter : 99 : 'name' | filterBySet : all_selected">
+                <li repeat.for="option of options | filter: filter : 'name' | filterBySet : all_selected | take : 199">
                     <div class="option-item" css="margin:0;padding:0;width:${inner_width}px">
                         <a click.trigger="toggle_selection(option)">${option.name}</a>
                     </div>
