--- a/src/members/member-edit.html
+++ b/src/members/member-edit.html
@@ -41,7 +41,7 @@
                                 <i class="fa  fa-large fa-rotate-left"></i>
                             </button>
                         <button if.bind="user.privileges.ADMIN" type="button" type="button" class="btn btn-warning ${dirty_story || dirty_info ? 'disabled' : btn-warning'}"
-                            click.trigger="try_delete(member.member_info.id)" t="[title]members.delete-member">
+                            click.trigger="tryDelete(member.member_info.id)" t="[title]members.delete-member">
                                 <i class="fa fa-large fa-trash"></i>
                             </button>
                     </div>
