--- a/src/members/members.html
+++ b/src/members/members.html
@@ -4,11 +4,10 @@
     <section class="container content-area">
         <div class="row top-head" style="margin-top:30px">
             <div style="background-color:rgba(0, 0, 0, 0);height:75px;padding-top:5px;padding-right:15px;">
-                <h1 dir="rtl"> ${"members.members" | t}</h1>
+                <h1 dir="rtl"><help topic="members" position="bottom" ></help> ${"members.members" | t}</h1>
             </div>
             <div class="row" style="margin-bottom:20px">
                 <div class="col-md-1">
-                    <!--<input type="range" id="range" min="4" max="32" step="1" change.trigger="slider_changed()" value.bind="faces_per_line" />-->
                 </div>
                 <div class="col-md-1" if.bind="! user.editing"></div>
                 <div class="col-md-5"></div>
