--- a/src/resources/elements/help.html
+++ b/src/resources/elements/help.html
@@ -1,14 +1,15 @@
 <template>
-    <button style="border-radius:50%;" class="btn btn-info btn-sm" aubs-popover="custom-popover.bind: customPopover;position.bind: position;" >
+    <button style="border-radius:50%;" class="btn btn-info btn-xs" 
+        click.delegate="edit_help_message()"
+        aubs-popover="custom-popover.bind: customPopover;position.bind: position;" >
         <i class="fa fa-question"></i>
     </button>
 
     <div ref="customPopover">
-        <h3 class="popover-title">
-            Help for ${topic}
+        <h3 class="popover-title" innerhtml.bind="story_info.name" dir="rtl">
         </h3>
 
-        <div class="popover-content" innerhtml.bind="content" >
+        <div class="popover-content" innerhtml.bind="story_info.story_text" dir="rtl">
         </div>
     </div>
 </template>
