--- a/src/resources/elements/help.html
+++ b/src/resources/elements/help.html
@@ -9,7 +9,7 @@
         <h3 class="popover-title" innerhtml.bind="story_info.name" dir="rtl">
         </h3>
 
-        <div class="popover-content" innerhtml.bind="story_info.story_text" dir="rtl">
+        <div class="popover-content" innerhtml.bind="story_text" dir="rtl">
         </div>
     </div>
 </template>
