--- a/src/user/user-mode.html
+++ b/src/user/user-mode.html
@@ -1,4 +1,17 @@
 <template>
+    <div class="btn-group dropdown" aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: toggled(state)" if.bind="user.privileges.DEVELOPER" >
+        <button class="btn btn-default dropdown-toggle" aubs-dropdown-toggle>
+            <i class="fa fa-cog"></i>
+            <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu dropdown-menu-left">
+            <li><a class="dropdown-item" href="javascript:void(0)">First Action</a></li>
+            <li><a class="dropdown-item" href="javascript:void(0)">Second Action</a></li>
+            <li><a class="dropdown-item" href="javascript:void(0)">Third Action</a></li>
+            <li class="divider"></li>
+            <li><a class="dropdown-item" href="javascript:void(0)">Separated Action</a></li>
+        </ul>
+    </div>
     <a href if.bind="! user.isLoggedIn" click.trigger="login()" class="border-right">
         <i class="fa fa-lg fa-sign-in"></i>
         ${'user.login' | t}
@@ -20,5 +33,15 @@
     <a if.bind="user.isLoggedIn && user.privileges.PHOTO_UPLOADER" href click.trigger="upload_files()" t="[title]user.upload-files" class="border-right">
         <i class="fa fa-lg fa-upload"></i>
     </a>
+    <div class="btn-group dropdown" aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: toggled(state)" if.bind="user.privileges.HELP_AUTHOR"  title="Manage help messages">
+        <button class="btn btn-default dropdown-toggle" aubs-dropdown-toggle>
+            <i class="fa fa-cog"></i><i class="fa fa-question"></i>
+            <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu dropdown-menu-left">
+            <li><a class="dropdown-item" href="#" click.trigger="save_help_messages()">Save help messages</a></li>
+            <li><a class="dropdown-item" href="#" click.trigger="load_help_messages()">Load help messages</a></li>
+        </ul>
+    </div>
 
 </template>
