--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -15,16 +15,20 @@
                 </div>
                 <div class="col-md-8">
                     <div class="row" style="margin-bottom:15px;">
-                        <div class="col-md-5 col-md-offset-7">
-                            <div class="input-group" style="width:100%;margin-top:15px;margin-right:-16px;">
-                                <input dir="rtl" type="search" class="form-control" t="[placeholder]photos.filter" style="font-size:18px;height:38px;" value.bind="filter & debounce"
-                                />
+                        <form class="form-inline">
+                            <div class="form-group">
+                                <input dir="rtl" type="search" class="form-control" t="[placeholder]photos.filter" style="font-size:18px;height:38px;" value.bind="filter & debounce"/>
                             </div>
-                        </div>
+                            <div class="form-group">
+                                <button if.bind="user.editing && params.grouped_selected_topics.length>0" class="btn btn-basic btn-md">${'photos.save-merges' | t}</button>
+                            </div>
+                            <div class="form-group">
+                                <button if.bind="user.editing && selected_photos.size > 0" class="btn btn-basic btn-md">${'photos.apply-to-selected' | t}</button>
+                            </div>
+                        </form>
                     </div>
                     <div class="row" id="photos-container" style="height:560px;overflow:auto;direction:rtl;margin:0;padding:0;">
-                        <span css="padding:0;margin:0;position:relative;width:${photo_size}px;height:${photo_size}px;" 
-                            repeat.for="photo of photo_list | filter : filter : 'title' | take : 9999">
+                        <span css="padding:0;margin:0;position:relative;width:${photo_size}px;height:${photo_size}px;" repeat.for="photo of photo_list | filter : filter : 'title' | take : 9999">
                             <a click.trigger="photo_clicked(photo, $event)" class.bind="photo.selected">
                                 <img src="${photo.square_src}" aubs-tooltip="text.bind:photo.title" width="${photo_size}" height="${photo_size}" style="margin:0;" />
                             </a>
@@ -37,17 +41,17 @@
                 </div>
                 <div class="col-md-3">
                     <div class="row">
-                        <multi-select options.bind="topic_list"
-                            settings.bind="{mergeable:true, source_mergeable:true}"
-                            grouped_selected_options.bind="params.grouped_selected_topics" 
-                            ungroupd_selected_options.bind="params.selected_topics"
-                            name="topics"
-                            place_holder_text="photos.click-topic" change.delegate="handle_topic_change($event) ">
+                        <multi-select options.bind="topic_list" 
+                        settings.bind="{mergeable:true, source_mergeable:true}" 
+                        grouped_selected_options.bind="params.grouped_selected_topics"
+                        ungroupd_selected_options.bind="params.selected_topics" 
+                        name="topics" 
+                        place_holder_text="photos.click-topic"
+                        change.delegate="handle_topic_change($event) ">
                         </multi-select>
                     </div>
                     <div class="row ">
-                        <multi-select options.bind="photographer_list" place_holder_text="photos.click-photographer"
-                            settings.bind="{mergeable:false, source_mergeable:true}"
+                        <multi-select options.bind="photographer_list" place_holder_text="photos.click-photographer" settings.bind="{mergeable:false, source_mergeable:true}"
                             change.delegate="handle_photographer_change($event)"></multi-select>
                     </div>
                     <div class="row" style="width:90%;margin-top: 20px;">
