--- a/src/resources/elements/multi-select.html
+++ b/src/resources/elements/multi-select.html
@@ -19,7 +19,7 @@
                             <a click.trigger="unmerge_options(option, $event)">
                                 <i class="fa fa-paperclip fa-rotate-90 tool"></i>
                             </a>
-                            <a if.bind="user.editing" click.trigger="toggle_sign(option, $event)">
+                            <a if.bind="user.advanced && !user.editing" click.trigger="toggle_sign(option, $event)">
                                 <!-- The rotatate-180 thing here and below is kind of voodoo. It is crazy without it-->
                                 <i class="fa fa-${option.sign}-square-o fa-rotate-180 tool"></i>
                             </a>
@@ -40,7 +40,7 @@
                             <a if.bind="can_merge" click.trigger="merge_options(option, $event)">
                                 <i class="fa fa-paperclip fa-rotate-90 tool"></i>
                             </a>
-                            <a if.bind="user.can_edit || user.advanced" click.trigger="toggle_sign(option, $event)">
+                            <a if.bind="can_edit || user.advanced" click.trigger="toggle_sign(option, $event)">
                                 <i class="fa fa-${option.sign}-square-o fa-rotate-180 tool"></i>
                             </a>
                             <a if.bind="can_edit" click.trigger="edit_option(option, $event)">
