--- a/src/stories/story-detail.html
+++ b/src/stories/story-detail.html
@@ -35,11 +35,13 @@
                 <div class="row" style="padding-right:15px;">
                     <div class="fr-view" dir="rtl">
                         <div class="big-story-panel">
-                            <p dir="rtl" innerhtml.bind="story.story_text">
+                            <p dir="rtl" if.bind="! user.editing" innerhtml.bind="story.story_text">
                             </p>
+                            <editable if.bind="user.editing" settings.bind="{show_date:false, class:'story-box', checkable: false}" story.bind="story"></editable>
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
