--- a/src/photos/upload-photos.html
+++ b/src/photos/upload-photos.html
@@ -1,9 +1,10 @@
 <template>
+    <require from="./photos.css"></require>
     <div class="row centered-form" style="width:720px;min-height:560px;" dir="ltr">
         <div class="col-md-10 col-md-offset-2">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h1 class="panel-title text-center" <strong>${"photos.upload-files" & t}</strong>
+                    <h1 class="panel-title text-center"><strong>${"photos.upload-files" & t}</strong>
                     </h1>
                 </div>
                 <div>
