--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="froala-style/froala-editor/css/froala_editor.pkgd.min.css" rel="stylesheet" type="text/css" />
   <link href="froala-style/froala-editor/css/froala_style.min.css" rel="stylesheet" type="text/css" />
   <script id="fr-fek">try{(function (k){localStorage.FEK=k;t=document.getElementById('fr-fek');t.parentNode.removeChild(t);})('QwsagB-22gE-13rkG2uiB-22==')}catch(e){}</script>
-  <script id="fr-fek1">try{(function (k){localStorage.FEK=k;t=document.getElementById('fr-fek1');t.parentNode.removeChild(t);})('mrhdE5fbjh==')}catch(e){}</script>
+  <!--script id="fr-fek1">try{(function (k){localStorage.FEK=k;t=document.getElementById('fr-fek1');t.parentNode.removeChild(t);})('mrhdE5fbjh==')}catch(e){}</script-->
 </head>
 
 <body aurelia-app="main">
