--- a/src/resources/elements/help.html
+++ b/src/resources/elements/help.html
@@ -6,8 +6,8 @@
     </button>
 
     <div ref="customPopover">
-        <h3 class="popover-title" innerhtml.bind="story_info.name" dir="rtl">
-        </h3>
+        <h2 class="popover-title" innerhtml.bind="story_info.name" dir="rtl" style="font-weight:bolder;">
+        </h2>
 
         <div class="popover-content" innerhtml.bind="story_text" dir="rtl">
         </div>
