--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -11,26 +11,32 @@
                 <div class="col-md-1">
                 </div>
                 <div class="col-md-8">
-                    <div class="row" style="margin-bottom:15px;">
-
-                        <div class="col-md-1 col-md-offset-6" if.bind="user.editing" style="padding-top:18px;">
-                            <a route-href="route: story-detail; params.bind: {id:'new'}" class="btn btn-success cl-create-btn">
-                                <i class="fa fa-plus-square-o"></i>
-                                ${'stories.new' & t}
-                            </a>
-                        </div>
-                        <div class="col-md-1 col-md-offset-6" if.bind="!user.editing"></div>
-                        <div class="col-md-5">
-                            <div class="input-group" style="width:90%;margin-top:15px;margin-right:35px;">
-                                <input dir="rtl" type="search" class="form-control" t="[placeholder]stories.filter" style="font-size:18px;height:38px;" value.bind="filter & debounce"
+                    <div class="row" style="margin-bottom:15px;padding-right:32px;">
+                        <form class="form-inline">
+                            <div class="form-group">
+                                <input dir="rtl" type="search" class="form-control" t="[placeholder]stories.filter" style="font-size:18px;height:38px;width:260px;" value.bind="filter & debounce"
                                     change.delegate="update_story_list()" />
                             </div>
-                        </div>
+                            <div class="form-group" if.bind="user.editing">
+                                <a route-href="route: story-detail; params.bind: {id:'new'}" class="btn btn-success cl-create-btn">
+                                    <i class="fa fa-plus-square-o"></i>
+                                    ${'stories.new' & t}
+                                </a>
+                            </div>
+                            <div class="form-group" if.bind="user.editing && selected_stories.size>0" >
+                                <button class="btn btn-basic btn-md"><i class="fa fa-trash fa-xs"></i></button>
+                            </div>
+                            <div class="form-group">
+                                <button if.bind="user.editing && selected_stories.size > 0 && params.grouped_selected_topics.length==0 && params.selected_topics.length>0" 
+                                    class="btn btn-basic btn-md">
+                                    ${'stories.apply-to-selected' | t}
+                                </button>
+                            </div>
+                        </form>
                     </div>
                     <ul style="width:100%;padding:0;float:right;height:560px;overflow:auto;list-style-type: none;padding-left:20px;">
-                        <li repeat.for="story of story_list | filter: filter : 'name' : 'author' | take : 9999" 
-                            dir="rtl" style="float:right;border-bottom:2px solid lightgray;padding-bottom:20px;position:relative;width:100%;">
-                            <div style="height:130px;overflow:hidden;padding:20px;" >
+                        <li repeat.for="story of story_list | filter: filter : 'name' : 'author' | take : 9999" dir="rtl" style="float:right;border-bottom:2px solid lightgray;padding-bottom:20px;position:relative;width:100%;">
+                            <div style="height:130px;overflow:hidden;padding:20px;">
                                 <div style="margin-bottom: 10px;" aubs-tooltip="text.bind:story.topics">
                                     <editable settings.bind="{show_date:false, class:'story-box', checkable: true}" story.bind="story" change.delegate="toggle_story_selection(story, $event)"></editable>
                                 </div>
@@ -43,20 +49,17 @@
                 <div class="col-md-3">
                     <div class="row" style="position:relative;">
                         <help topic="tags" position="bottom" style="position:absolute;left:10px;top:20px;"></help>
-                        <multi-select options.bind="topic_list" place_holder_text="photos.click-topic" height="180" 
-                            settings.bind="{source_mergeable: true}"
+                        <multi-select options.bind="topic_list" place_holder_text="photos.click-topic" height="180" settings.bind="{source_mergeable: true}"
                             change.delegate="handle_topic_change($event) ">
                         </multi-select>
                     </div>
                     <div if.bind="false" class="row">
-                        <multi-select options.bind="used_languages" place_holder_text="stories.languages" height="80" 
-                            change.delegate="handle_languages_change($event) ">
+                        <multi-select options.bind="used_languages" place_holder_text="stories.languages" height="80" change.delegate="handle_languages_change($event) ">
                         </multi-select>
                     </div>
                     <div class="row">
                         <div style="margin-top: 16px;margin-bottom:2px;font-size:120%">${'stories.story-types' | t}</div>
-                        <multi-select options.bind="story_types" place_holder_text="stories.story-types" height="150"
-                            settings.bind="{mergeable:false,source_mergeable:false,editable:false}" 
+                        <multi-select options.bind="story_types" place_holder_text="stories.story-types" height="150" settings.bind="{mergeable:false,source_mergeable:false,editable:false}"
                             change.delegate="handle_story_types_change($event) ">
                         </multi-select>
                     </div>
@@ -64,10 +67,8 @@
                         <span if.bind="num_of_stories">${num_of_stories} ${'stories.matching-stories' | t}</span>
                         <span if.bind="! num_of_stories">&nbsp;</span>
                         <help topic="words" position="top" style="position:absolute;left:10px;top:39px;" params.bind="help_data"></help>
-                        <multi-select options.bind="stories_index" place_holder_text="stories.word-index" height="201"
-                            settings.bind="{editable: false}"
-                            change.delegate="handle_words_change($event) "
-                        </multi-select>
+                        <multi-select options.bind="stories_index" place_holder_text="stories.word-index" height="201" settings.bind="{editable: false}"
+                            change.delegate="handle_words_change($event) " </multi-select>
                     </div>
                 </div>
             </div>
