--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -20,13 +20,19 @@
                                 <input dir="rtl" type="search" class="form-control" t="[placeholder]photos.filter" style="font-size:18px;height:38px;" value.bind="filter & debounce"/>
                             </div>
                             <div class="form-group">
-                                <button if.bind="user.editing && params.grouped_selected_topics.length>0" class="btn btn-basic btn-md">${'photos.save-merges' | t}</button>
+                                <button if.bind="user.editing && params.grouped_selected_topics.length>0" class="btn btn-basic btn-md" click.trigger="save_merges($event)">
+                                    ${'photos.save-merges' | t}
+                                </button>
                             </div>
                             <div class="form-group">
-                                <button if.bind="user.editing && selected_photos.size > 0 && params.grouped_selected_topics.length==0" class="btn btn-basic btn-md">${'photos.apply-to-selected' | t}</button>
+                                <button if.bind="user.editing && checked_photos.size > 0 && params.grouped_selected_topics.length==0 && params.selected_topics.length>0"
+                                     class="btn btn-basic btn-md"
+                                     click.trigger="apply_to_selected()">
+                                     ${'photos.apply-to-selected' | t}
+                                </button>
                             </div>
                             <div class="form-group">
-                                <button if.bind="selected_photos.size > 0" t="[title]photos.download" class="btn btn-basic btn-md"><i class="fa fa-upload fa-rotate-180 -fa-xs"></i></button>
+                                <button if.bind="checked_photos.size > 0" t="[title]photos.download" class="btn btn-basic btn-md"><i class="fa fa-upload fa-rotate-180 -fa-xs"></i></button>
                             </div>
                         </form>
                     </div>
