--- a/src/photos/photo-detail.html
+++ b/src/photos/photo-detail.html
@@ -9,7 +9,7 @@
         </div>
         <div class="row">
             <div class="col-md-7" style="padding-left:40px;">
-                <img src.bind="photo_src" width="600" />
+                <img src.bind="photo_src" width="${photo_width}" />
             </div>
             <div class="col-md-5" innerhtml.bind="photo_story" dir="rtl">
             </div>
