--- a/src/resources/elements/editable.html
+++ b/src/resources/elements/editable.html
@@ -1,15 +1,16 @@
 <template>
+    <require from="./editable.css"></require>
 
     <div css="margin-top:10px;margin-right:0;margin-left:0;padding:0;width:${width}">
         <div class="row">
             <span show.bind="story.name" dir="rtl" style="padding:0;margin:0;float:right;">
                 <i class="fa fa-sm fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story, 'show')">&nbsp;&nbsp;</i>
                 <i if.bind="user.privileges.EDITOR" class="fa fa-sm fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story, 'edit')">&nbsp;</i>
-                <i if.bind="settings.checkable && user.editing" class="fa fa-sm fa-circle${checked ? '' : '-o'} is-link" t="[title]stories.checking" click.trigger="toggle_checked()">&nbsp;</i>
+                <i if.bind="settings.checkable && user.editing" class="fa fa-sm fa-circle${story.checked ? '' : '-o'} is-link" t="[title]stories.checking" click.trigger="toggle_checked()">&nbsp;</i>
             <span if.bind="settings.show_date &&story.timestamp">${story.timestamp} | </span>
             <span if.bind="story.author">${story.author}: </span>
         </div>
-        <div class="row" stylex="padding:0;"><strong style="float:right" innerhtml.bind="story.name" ></strong></div>
+        <div class="row checkable ${story.checked ? 'selected' : ''}"><strong style="float:right" innerhtml.bind="story.name" ></strong></div>
 
         <div class="fr-view row ${settings.class}">
             <p innerhtml.bind="story.story_text" css="float:right;direction:rtl;" >
