--- a/src/members/members.html
+++ b/src/members/members.html
@@ -2,8 +2,8 @@
     <require from="./members.css"></require>
 
     <section class="container content-area">
-        <div class="row top-head" style="margin-top:30px">
-            <div style="background-color:rgba(0, 0, 0, 0);height:75px;padding-top:5px;padding-right:15px;">
+        <div class="row top-head" css="margin-top:30px;background-image:url('${theme.files.top_background}');">
+            <div  style="background-color:rgba(120, 120, 120, 0.3);height:75px;padding-top:5px;padding-right:15px;">
                 <h1 dir="rtl"><help topic="members" position="bottom" ></help> ${"members.members" | t}</h1>
             </div>
             <div class="row" style="margin-bottom:20px">
