--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -1,7 +1,7 @@
 <template>
     <require from="./stories.css"></require>
     <section class="container content-area">
-        <div class="row top-head" style="margin-top:30px">
+        <div class="row top-head" style="margin-top:30px;background-image:url('${theme.files.top_background}');">
             <div style="background-color:rgba(120, 120, 120, 0.3);height:75px;padding-top:5px;padding-right:15px;">
                 <h1 dir="rtl"> ${"stories.place-stories" | t}</h1>
             </div>
